# llm-chatbot-workshop

./: .gitignore  Makefile  README.md  pyproject.toml
backend/assets/test/: copypasta.txt
notebooks/01_embeddings/: notebook.ipynb
notebooks/01_embeddings/.ipynb_checkpoints/: notebook-checkpoint.ipynb
notebooks/01_embeddings_and_vector_db/: notebook.ipynb
notebooks/02_vector_database/: notebook.ipynb
notebooks/03_observability/: .deepeval_telemtry.txt  notebook.ipynb
notebooks/03_observability/.ipynb_checkpoints/: notebook-checkpoint.ipynb
notebooks/04_app_deployment/: notebook.ipynb
notebooks/extra_finetuning_your_llm/: notebook.ipynb
