

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llm-chatbot-workshop"
version = "0.1.0"
description = "A Python virutal environment for tutorial notebooks"
authors = ["Adam Goh <adam.goh@zenika.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupyter = "^1.0"
openai = ">=0.27"
torch = "^2.5.0"
pymupdf = "^1.24.12"
tiktoken = {extras = ["openai-public"], version = "^0.8.0"}
langchain = "^0.3.4"
langchain-community = "^0.3.3"
scikit-learn = "^1.5.2"
py-make = "^0.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"
pylint = "^3.3.1"
flake8 = "^7.1.1"
black = "^24.10.0"
pylance = "^0.19.1"

# embeddings
[tool.poetry.group.tutorial-01.dependencies]
pymilvus = "^2.4.8"
tiktoken = "^0.8.0"
llama-index = "*"
transformers = "^4.46.1"
pymupdf4llm = "^0.0.17"
faiss-cpu = "^1.9.0"

# vector_database

# observability
llama-index-embeddings-huggingface = "^0.3.1"
llama-index-embeddings-ollama = "^0.3.1"
[tool.poetry.group.tutorial-03.dependencies]
langfuse = "^2.53.3"
mlflow = ">=2.17.0"
langchain-openai = "^0.2.5"
llama-index-llms-ollama = ">=0.3.4"
arize-phoenix = {extras = ["embeddings", "llama-index"], version = ">=5.6.0"}
deepeval = "^1.4.9"
llama-index-utils-workflow = "^0.2.2"
litellm = "^1.52.0"


[tool.poetry.group.tutorial-02.dependencies]
milvus = "^2.3.8"
llama-index-embeddings-huggingface = "^0.3.1"
llama-index-vector-stores-chroma = "^0.3.0"

